refactor: Third pass API refactor
