# api/internal/api/router.go
@@ -47,17 +47,15 @@ func NewRouter(
 	r.Route("/api/v3", func(api chi.Router) {
 		api.Route("/geokrety", func(gr chi.Router) {
 			gr.Get("/", statsHandler.GetGeokretyList)
-			gr.Get("/search", statsHandler.SearchGeokrety)
-			gr.Get("/{gkid:[A-Za-z0-9]+}", statsHandler.GetGeokretyDetailsByGkId)
-			gr.Get("/{gkid:[A-Za-z0-9]+}/stats", statsHandler.GetGeokretStats)
-			gr.Get("/{gkid:[A-Za-z0-9]+}/moves", statsHandler.GetGeokretyMoves)
-			gr.Get("/{gkid:[A-Za-z0-9]+}/moves/{moveId:[0-9]+}", statsHandler.GetGeokretyMoveDetails)
-			gr.Get("/{gkid:[A-Za-z0-9]+}/loved-by", statsHandler.GetGeokretyLovedBy)
-			gr.Get("/{gkid:[A-Za-z0-9]+}/watched-by", statsHandler.GetGeokretyWatchedBy)
-			gr.Get("/{gkid:[A-Za-z0-9]+}/finders", statsHandler.GetGeokretyFinders)
-			gr.Get("/{gkid:[A-Za-z0-9]+}/pictures", statsHandler.GetGeokretyPictures)
-			gr.Get("/{gkid:[A-Za-z0-9]+}/countries", statsHandler.GetGeokretyCountries)
-			gr.Get("/{gkid:[A-Za-z0-9]+}/waypoints", statsHandler.GetGeokretyWaypoints)
+			gr.Get("/{gkid:(?:[Gg][Kk])?[0-9A-Fa-f]+}", statsHandler.GetGeokretyDetailsByGkId)
+			gr.Get("/{gkid:(?:[Gg][Kk])?[0-9A-Fa-f]+}/stats", statsHandler.GetGeokretStats)
+			gr.Get("/{gkid:(?:[Gg][Kk])?[0-9A-Fa-f]+}/moves", statsHandler.GetGeokretyMoves)
+			gr.Get("/{gkid:(?:[Gg][Kk])?[0-9A-Fa-f]+}/loved-by", statsHandler.GetGeokretyLovedBy)
+			gr.Get("/{gkid:(?:[Gg][Kk])?[0-9A-Fa-f]+}/watched-by", statsHandler.GetGeokretyWatchedBy)
+			gr.Get("/{gkid:(?:[Gg][Kk])?[0-9A-Fa-f]+}/finders", statsHandler.GetGeokretyFinders)
+			gr.Get("/{gkid:(?:[Gg][Kk])?[0-9A-Fa-f]+}/pictures", statsHandler.GetGeokretyPictures)
+			gr.Get("/{gkid:(?:[Gg][Kk])?[0-9A-Fa-f]+}/countries", statsHandler.GetGeokretyCountries)
+			gr.Get("/{gkid:(?:[Gg][Kk])?[0-9A-Fa-f]+}/waypoints", statsHandler.GetGeokretyWaypoints)
 		})
 		api.Route("/moves", func(mr chi.Router) {
 			mr.Get("/", statsHandler.GetMoveList)
@@ -69,14 +67,12 @@ func NewRouter(
 			cr.Get("/{code:[A-Za-z]{2}}/geokrety", statsHandler.GetCountryGeokrety)
 		})
 		api.Route("/waypoints", func(wr chi.Router) {
-			wr.Get("/search", statsHandler.SearchWaypoints)
 			wr.Get("/{code:[A-Za-z0-9_-]{2,32}}", statsHandler.GetWaypoint)
 			wr.Get("/{code:[A-Za-z0-9_-]{2,32}}/geokrety-current", statsHandler.GetWaypointCurrentGeokrety)
 			wr.Get("/{code:[A-Za-z0-9_-]{2,32}}/geokrety-past", statsHandler.GetWaypointPastGeokrety)
 		})
 		api.Route("/users", func(ur chi.Router) {
 			ur.Get("/", statsHandler.GetUserList)
-			ur.Get("/search", statsHandler.SearchUsers)
 			ur.Get("/{id:[0-9]+}", statsHandler.GetUserDetails)
 			ur.Get("/{id:[0-9]+}/stats", statsHandler.GetUserStats)
 			ur.Get("/{id:[0-9]+}/geokrety-owned", statsHandler.GetUserOwnedGeokrety)
